--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="image" style="background-image: url('/images/service/serviceIndex03.jpg')"></div>
     </div>
     <div class="item">
-        <div class="image" style="background-image: url('/images/service/serviceIndex01.jpg')"></div>
+        <div class="image" style="background-image: url('/images/service/serviceIndex01.JPG')"></div>
     </div>
 </div>
 
