Build $env:APPVEYOR_BUILD_VERSION

--- a/onama/index.html
+++ b/onama/index.html
@@ -77,51 +77,85 @@
 
     <!-- Content -->
     
-<div class="owl-carousel owl-theme owl-loaded">
-    <div class="item">
-        <div class="image" style="background-image: url('/images/service/serviceIndex02.jpg')"></div>
-    </div>
-    <div class="item">
-        <div class="image" style="background-image: url('/images/service/serviceIndex03.jpg')"></div>
-    </div>
-    <div class="item">
-        <div class="image" style="background-image: url('/images/service/serviceIndex01.jpg')"></div>
-    </div>
-</div>
-
-<div class="container">
+<section class="container">
     <div class="row">
         <div class="col s12">
-            <h4>Djelatnosti</h4>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col sm12">
-            <ul class="activities-list">
-                <li>servis plinskih uređaja</li>
-                <li>popravak plinskih uređaja i regulacija</li>
-                <li>puštanje u pogon plinskih uređaja</li>
-                <li>puštanje u pogon i održavanje kondenzacijskih plinskih uređaja</li>
-                <li>puštanje u pogon regulacija vođenih vanjskom temperaturom</li>
-                <li>puštanje u pogon solarnih sistema grijanja i pripreme tople vode</li>
-                <li>puštanje u pogon dizalica topline (toplinske pumpe)</li>
-                <li>puštanje u pogon mikrokogeneracijskih uređaja (proizvodnja struje i topline preko plinskog motora)</li>
+            <p class="flow-text">Dvadeset godina rada i iskustva u montaži i održavanju instalacija glavna su obilježja suradnje koja je 2013 godine okrunjena otvaranjem tvrtke <b>"TERMOSERVIS MD" d.o.o.</b></p>
+            <ul>
+                <li class="flow-text">besplatna izrada ponuda</li>
+                <li class="flow-text">stručna preporuka o vrsti i načinu grijanja ili hlađenja Vašeg doma</li>
+                <li class="flow-text">savjet i izračun isplativosti investicija obnovljivih izvora energije</li>
+                <li class="flow-text">pouzdana montaža uz ugradnju renomirane opreme</li>
+                <li class="flow-text">garancija izvedenih radova</li>
             </ul>
+            <p class="flow-text">Naš posao ne završava montažom i puštanjem u pogon montirane opreme, mi smo tu da Vam pomognemo da Vaš dom funkcionira savršeno dugi niz godina.</p>
         </div>
     </div>
-    <div class="row">
-        <div class="col s12">
-            <h4>Ovlašteni servis</h4>
-        </div>
-    </div>
-    <div class="row service-logos">
-        <div class="col s12 m6 l3 valign-wrapper"><img class="valign" src="images/LogoVaillant.jpg" alt="Vaillant Logo" /></div>
-        <div class="col s12 m6 l3 valign-wrapper"><img class="valign" src="images/LogoViessmann.jpg" alt="Viessman Logo" /></div>
-        <div class="col s12 m6 l3 valign-wrapper"><img class="valign" src="images/LogoBosch.jpg" alt="Bosch Logo" /></div>
-        <div class="col s12 m6 l3 valign-wrapper"><img class="valign" src="images/LogoJunkers.jpg" alt="Junkers Logo" /></div>
-    </div>
-</div>
+</section>
 
+<section class="container">
+    <div class="row">
+        <div class="s12">
+            <table>
+                <tr>
+                    <td>Naziv</td>
+                    <td>TERMOSERVIS d.o.o.</td>
+                </tr>
+                <tr>
+                    <td>Puni naziv</td>
+                    <td>TERMOSERVIS društvo s ograničenom odgovornošću za servis plinskih trošila i održavanje termotehničkih instalacija</td>
+                </tr>
+                <tr>
+                    <td>Članovi uprave</td>
+                    <td>Mario Toplek</td>
+                </tr>
+                <tr>
+                    <td>Temeljni kapital</td>
+                    <td>
+                        <div>uplaćen u cijelosti u visini do 20.000,oo kn</div>
+                        <div>Trgovački sud u Varaždinu</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>OIB</td>
+                    <td>42039157094</td>
+                </tr>
+                <tr>
+                    <td>IBAN</td>
+                    <td>HR-57 2340 0091 1106 1990 9</td>
+                </tr>
+                <tr>
+                    <td>MBS</td>
+                    <td>4132289</td>
+                </tr>
+                <tr>
+                    <td>Adresa</td>
+                    <td>
+                        <div>Ivane Brlić Mažuranić 26</div>
+                        <div>40000, Čakovec</div>
+                        <div>Hrvatska (Croatia)</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Telefon</td>
+                    <td>+385 40 395 970</td>
+                </tr>
+                <tr>
+                    <td>Mobitel</td>
+                    <td>+385 98 600 122</td>
+                </tr>
+                <tr>
+                    <td>Email</td>
+                    <td><a href="mailto:info@termoservis.hr">info@termoservis.hr</a></td>
+                </tr>
+                <tr>
+                    <td>Stranica</td>
+                    <td><a href="http://termoservis.hr">www.termoservis.hr</a></td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</section>
 
     <div class="contact-form z-depth-1">
         <div class="container">
